    fix icon/compact view left-click doesn't unselect other files
    write/read new mimeapps.list Default Applications #450
    archive handlers take precedence over file handlers
    scale menu item icons loaded from file
    force rebuild of folder_view for font change in exo_icon_view
    always reap async child with or without exec_keep_tmp #533
1.0.1   2015-05-04:
    extended bookmarks system
    added users manual Bookmarks section
    fix --enable-hal build errors #496
    fix segfault in vfs_thumbnail_loader_free on abort thumbnail loading
    _vfs_thumbnail_load unref after gdk_pixbuf_apply_embedded_orientation
    MIME Menu prompt before creating files
    Open menu archive functions move to top if default
    rewrite ptk_file_browser_refresh; reselect cursor after refresh
    status bar shows Reading msg while dir loading #459
    new protocol handler http/webdav to top of list
    Bookmarks|New Bookmark default key shortcut Ctrl+D
1.0.0   2015-04-13:
    revert desktop dialogs pop to top #424 bba93a50 dlgs on wrong desktop
    update translations cs de ja pl pt_BR ru sv tr 
    add transparent background option [BwackNinja]
    fix Attempt to unlock mutex that was not locked startup error #468
    fixed 'Invalid cross-device link' when renaming aufs dirs
    configure option --disable-desktop-integration hides Prefs|Desktop tab #448
    fixed problem in command-line option --show-pref=N not showing Advanced tab
    add configure option --with-bash-path #452
    new transifex slug
    add Device Protocol File Archive handlers
    add default handlers: ftp ssh mtp gphoto/ptp ifuse fusesmb
    add video thumbnails via ffmpegthumbnailer
    add configure option --disable-video-thumbnails
    add change detection blacklist
    add mount and unmount run-task socket commands
    new maximum Small and Large icon sizes to 256x256
    new View|Style|Large Icons options for Detailed/Compact #478 #480
    Show|Display Name %n devnum